--- a/src/app/modules/favourite-tweets/favourite-tweets/favourite-tweets.component.html
+++ b/src/app/modules/favourite-tweets/favourite-tweets/favourite-tweets.component.html
@@ -1,3 +1,4 @@
-<p>
-  favourite-tweets works!
-</p>
+<div class="wrapper">
+    <mat-card>wgwrgw</mat-card>
+    <mat-card>wgwrgw</mat-card>
+</div>
