--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -1,9 +1,10 @@
 header {
-    height: 80px;
-    background-color: #03A9F4;
+    height: 200px;
+    background-color: #673AB7;
 }
 
 h1 {
     color: white;
-    padding: 20px;
+    padding: 80px;
+    font-weight: lighter;
 }
