--- a/src/app/modules/search-tweets/search-tweets/search-tweets.component.html
+++ b/src/app/modules/search-tweets/search-tweets/search-tweets.component.html
@@ -1,4 +1,22 @@
 <div class="wrapper">
-    <mat-card>wgwrgw</mat-card>
-    <mat-card>wgwrgw</mat-card>
+    <!-- <mat-card *ngFor="let tweet of tweets">
+
+    </mat-card> -->
+
+    <mat-card *ngFor="let tweet of tweets">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{tweet.user.name}}</mat-card-title>
+            <mat-card-subtitle>{{tweet.created_at | date}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            {{tweet.text}}
+        </mat-card-content>
+        <mat-card-actions>
+            <mat-icon color="accent" *ngIf="tweet.favorited" (click)="liked()">favorite</mat-icon>
+            <mat-icon *ngIf="!tweet.favorited" (click)="liked()">favorite_border</mat-icon>
+            <span>{{tweet.favorite_count}}</span>
+        </mat-card-actions>
+    </mat-card>
+
 </div>
