Complete app (without Heroku)

--- a/src/app/modules/favourite-tweets/favourite-tweets/favourite-tweets.component.html
+++ b/src/app/modules/favourite-tweets/favourite-tweets/favourite-tweets.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
-    <mat-card>wgwrgw</mat-card>
-    <mat-card>wgwrgw</mat-card>
+
+    <app-favourite *ngFor="let favorite of favoriteTweets" [favorite]="favorite"></app-favourite>
+
 </div>
